--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ env_logger = "0.11.6"
 logger = "0.4.0"
 sea-orm = { version = "1.1.5", features = [ "sqlx-mysql", "runtime-async-std-native-tls", "macros" ] }
 serde = { version = "1.0.218", features = ["derive"] }
+jsonwebtoken = "9.3.1"
+chrono = "0.4.40"
 sha256 = "1.6.0"
 lazy_static = "1.5.0"
 dotenv = "0.15.0"
